--- a/sitekinho/index.html
+++ b/sitekinho/index.html
@@ -13,17 +13,31 @@
     <body>
         <Header>
             <img src="img/logoadd.png" alt="logo">
-            <ul>
-                <li><a href="paginas/cathomem.html">Homem</a></li>
-                <li><a href="paginas/catmulher.html">Mulher</a></li>
-                <li><a href="paginas/catinfantil.html">Infantil</a></li>
-                <li><a href="paginas/catmarcas.html">Marcas</a></li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="paginas/cathomem.html">Homem</a></li>
+                    <li><a href="paginas/catmulher.html">Mulher</a></li>
+                    <li><a href="paginas/catinfantil.html">Infantil</a></li>
+                    <li><a href="paginas/catmarcas.html">Marcas</a></li>
+                </ul>
+            </nav>
             <input type="text" name="search" 
             placeholder="Search anything here ..">
         </Header>
         <main>
             <img src="img/banner.png" alt="">
+            <article>
+                <section>
+                    <a href="paginas/produto.htm"><img src="img/produtos.jpg" alt="produto"><p>Categoria Homem</p></a>
+                </section>
+                <section>
+                    <a href="paginas/produto.htm"><img src="img/produtos.jpg" alt="produto"><p>Categoria mulher</p></a>
+                </section>
+                <section>
+                    <a href="paginas/produto.htm"><img src="img/produtos.jpg" alt="produto"><p>Categoria Infantil</p></a>
+                </section>
+            </article>
+                <img src="img/banner.png" alt="">
             <article>
                 <section>
                     <a href="paginas/produto.htm"><img src="img/produto.png" alt="produto"><p>vestido</p></a>
