--- a/sitekinho/index.html
+++ b/sitekinho/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <Header>
-            <img src="img/logoadd.png" alt="logo">
+            <img src="img/football baner.jpg" alt="logo">
             <nav>
                 <ul>
                     <li><a href="paginas/cathomem.html">Homem</a></li>
@@ -20,25 +20,23 @@
                     <li><a href="paginas/catinfantil.html">Infantil</a></li>
                     <li><a href="paginas/catmarcas.html">Marcas</a></li>
                 </ul>
+                <input type="text" name="search" 
+                placeholder="Search anything here ..">
             </nav>
-            <input type="text" name="search" 
-            placeholder="Search anything here ..">
         </Header>
         <main>
-            <img src="img/banner.png" alt="">
-            <article>
+            <article class="categoria">
                 <section>
-                    <a href="paginas/produto.htm"><img src="img/produtos.jpg" alt="produto"><p>Categoria Homem</p></a>
+                    <a href="paginas/produto.htm"><img class="Imgcategorias" src="img/homem.png" alt="produto"><p>Categoria Homem</p></a>
                 </section>
                 <section>
-                    <a href="paginas/produto.htm"><img src="img/produtos.jpg" alt="produto"><p>Categoria mulher</p></a>
+                    <a href="paginas/produto.htm"><img class="Imgcategorias" src="img/mulher.png" alt="produto"><p>Categoria mulher</p></a>
                 </section>
                 <section>
-                    <a href="paginas/produto.htm"><img src="img/produtos.jpg" alt="produto"><p>Categoria Infantil</p></a>
+                    <a href="paginas/produto.htm"><img class="Imgcategorias" src="img/infantil.png" alt="produto"><p>Categoria Infantil</p></a>
                 </section>
             </article>
-                <img src="img/banner.png" alt="">
-            <article>
+            <article class="produtos">
                 <section>
                     <a href="paginas/produto.htm"><img src="img/produto.png" alt="produto"><p>vestido</p></a>
                 </section>
