--- a/sitekinho/index.html
+++ b/sitekinho/index.html
@@ -55,6 +55,12 @@
                 <section>
                     <a href="paginas/produto.htm"><img src="img/produto.png" alt="produto"><p>vestido</p></a>
                 </section>
+                <section>
+                    <a href="paginas/produto.htm"><img src="img/produto.png" alt="produto"><p>vestido</p></a>
+                </section>
+                <section>
+                    <a href="paginas/produto.htm"><img src="img/produto.png" alt="produto"><p>vestido</p></a>
+                </section>
             </article>
         </main>
         <footer>
