--- a/sitekinho/paginas/catmulher.html
+++ b/sitekinho/paginas/catmulher.html
@@ -12,17 +12,14 @@
     </head>
     <body>
         <Header>
-            <img src="../img/logoadd.png" alt="logo">
+            <img src="../img/football baner.jpg" alt="logo">
             <nav>
                 <ul>
                     <li><a href="cathomem.html">Homem</a></li>
                     <li><a href="catmulher.html">Mulher</a></li>
                     <li><a href="catinfantil.html">Infantil</a></li>
-                    <li><a href="catmarcas.html">Marcas</a></li>
                     <li><a href="../index.html">Home</a></li>
                 </ul>
-                <input type="text" name="search" 
-                placeholder="Search anything here ..">
             </nav>
         </Header>
             <article>
