--- a/sitekinho/paginas/produto.htm
+++ b/sitekinho/paginas/produto.htm
@@ -11,30 +11,54 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
     </head>
     <body>
-        <article>
-            <img src="../img/produto.png" alt="produto">
-        </article>
+        <Header>
+            <img src="../img/football baner.jpg" alt="logo">
+            <nav>
+                <ul>
+                    <li><a href="cathomem.html">Homem</a></li>
+                    <li><a href="catmulher.html">Mulher</a></li>
+                    <li><a href="catinfantil.html">Infantil</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                </ul>
+            </nav>
+        </Header>
+        <main>
+            <article>
+                <h2>Vestido muito binito</h2>
+                <img src="../img/produto.png" alt="produto">
+                <p>tamanhos disponiveis: </p><p>PP P M G GG</p>
+                <a href="https://api.whatsapp.com/send?phone=5548998399586&text=ola%2C%20gostaria%20de%20comprar%20uma%20roupa%20que%20vi%20no%20seu%20site" target="_blank">Compre Pelo whatsapp</a>
+                <h3>Sobre o produto:</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus, tempora voluptates quia, ab, excepturi harum minima reiciendis ipsum ipsa non aperiam deleniti suscipit enim praesentium odio optio! Voluptatum, cumque consectetur.</p>
+            </article>
+            <article class="produtos">
+                <section>
+                    <a href="produto.htm"><img src="../img/produto.png" alt="produto"><p>vestido</p></a>
+                </section>
+                <section>
+                    <a href="produto.htm"><img src="../img/produto.png" alt="produto"><p>vestido</p></a>
+                </section>
+                <section>
+                    <a href="produto.htm"><img src="../img/produto.png" alt="produto"><p>vestido</p></a>
+                </section>
+                <section>
+                    <a href="produto.htm"><img src="../img/produto.png" alt="produto"><p>vestido</p></a>
+                </section>
+                <section>
+                    <a href="produto.htm"><img src="../img/produto.png" alt="produto"><p>vestido</p></a>
+                </section>
+                <section>
+                    <a href="produto.htm"><img src="../img/produto.png" alt="produto"><p>vestido</p></a>
+                </section>
+                <section>
+                    <a href="produto.htm"><img src="../img/produto.png" alt="produto"><p>vestido</p></a>
+                </section>
+                <section>
+                    <a href="produto.htm"><img src="../img/produto.png" alt="produto"><p>vestido</p></a>
+                </section>
+            </article>
+        </main>
+        <footer>
+            <p>Sei lá oq botar aq mas tbm é o rodape</p>
+        </footer>
     </body>
-    <!-- <form action="https://desenvolvedor.moip.com.br/sandbox/PagamentoMoIP.do" method="post">
-        <input type="hidden" name="id_carteira" value="integracao@labs.moip.com.br">
-        Produto: <input type="text" name="nome" value="Motivo do pagamento"><br />  
-        Valor: <input type="text" name="valor" value="100"><br />
-        <input type="hidden" name="id_transacao" value="">    
-        <input type="hidden" name="descricao" value="Adicione aqui mais informações sobre o pagamento">
-        <input type="hidden" name="frete" value="1">  
-        Peso Frete: <input type="text" name="peso_compra" value="1000"><br />   
-        Nome completo: <input type="text" name="pagador_nome" value="Nome Sobrenome"><br /> 
-        Email: <input type="text" name="pagador_email" value="email@comprador.com.br"><br />    
-        Telefone: <input type="text" name="pagador_telefone" value="1155555555"><br />  
-        Rua: <input type="text" name="pagador_logradouro" value="Rua do pagador"><br /> 
-        Numero: <input type="text" name="pagador_numero" value="123"><br /> 
-        Complemento: <input type="text" name="pagador_complemento" value="ap 001"><br />
-        Bairro: <input type="text" name="pagador_bairro" value="Bairro do pagador"><br />
-        CEP: <input type="text" name="pagador_cep" value="11111111"><br />  
-        Cidade: <input type="text" name="pagador_cidade" value="São Paulo"><br />
-        Estado: <input type="text" name="pagador_estado" value="SP"><br />  
-        <input type="hidden" name="pagador_pais" value="Brasil">  
-        CPF: <input type="text" name="pagador_cpf" value="22222222222"><br />   
-        <input type="hidden" name="url_retorno" value="https://sualoja.com.br/notificacao/">
-        <input type='image' name='submit' src='https://desenvolvedor.moip.com.br/sandbox/imgs/buttons/bt_pagar_c02_e04.png' alt='Pagar via Moip' border='0' />
-    </form -->
