--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             </article>
         </main>
         <footer>
-            <p>Sei la oq enfiar aq, mas é o rodapé</p>
+            <a href="https://www.instagram.com/provemodaesportiva/"><img src="img/instagram.png" alt="insta"></a>
+            
         </footer>
     </body>
