--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <a href="paginas/calçajeans2.html"><img src="img/calça2.jpeg" alt="produto"><p>Calça Jeans</p></a>
                 </section>
                 <section>
-                    <a href="paginas/conjuntopink.html"><img src="img/conjunto pink.jpeg" alt="produto"><p>Conjunto Pink Alfaiataria</p></a>
+                    <a href="paginas/conjuntopink.html"><img src="img/conjunto pink.jpeg" alt="produto"><p>Pink Alfaiataria</p></a>
                 </section>
                 <section>
                     <a href="paginas/jaquetajeans.html"><img src="img/jaqueta jeans.jpeg" alt="produto"><p>Jaqueta Jeans</p></a>
